# pomodoro

./: Makefile  README.md  pyproject.toml  setup.py  test.py
.github/: CODEOWNERS
.github/workflows/: pylint.yml
requirements/: requirements.in  requirements.txt
src/app/: cli.py  progress_bar.py  run.py
tests/: cli_test.py  run_test.py
