[build-system]
requires = ["setuptools>=62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomodoro"
version = "0.1"
description = "A command-line pomodoro timer."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tools.setuptools.dynamic]
dependencies={file= ["requirements/requirements.txt"]}

[project.scripts]
pomodoro = "app.run:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []
